Decreased the margin to fix image too big bug

--- a/style.css
+++ b/style.css
@@ -94,14 +94,21 @@ h1 {
   width: 35px;
   height: 35px;
   float: right;
-  margin-right: 50px;
+  margin-right: 35px;
 }
 
-.item input{
+.action-add{
   width: 30px;
   height: 30px;
   float: right;
   margin-right: 50px;
+}
+
+.action-sub{
+  width: 30px;
+  height: 30px;
+  float: right;
+  margin-right: 30px;
 }
 
 .compareButton {
